# cmrawspy

./: .gitignore  README.md  pyproject.toml
cmrawspy/: cmrawspy.py
data/: s3job.json
